--- a/Teste_background/style.css
+++ b/Teste_background/style.css
@@ -1,3 +1,25 @@
 body{
-    background-image: url('imagens\wallpaper002.jpg');
+    /**background: Color Image Repeat Attachment Position;**/
+
+    background: #000000 url('imagens/wallpaper002.jpg') no-repeat fixed;
+    padding: 7px;
+    background-size: cover;
+    height: 100vh;
+    
+}
+main{
+    background-color: #fafafa;
+    max-width:  600px;
+    margin:auto;
+    border:3px solid #000000;
+    border-radius: 5px;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    text-indent: 25px;
+}
+h1{
+    font-size: 40px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
 }
