--- a/desafio_tabelas/style.css
+++ b/desafio_tabelas/style.css
@@ -1,11 +1,14 @@
-td{
+th, td{
     border: black solid 2px;
-    padding: 5PX;
-    text-align: center;
+    padding: 3px;
     width: 50px;
     height: 35px;
 }
+th{
+    text-align: center;
+    background-color: rgb(230, 230, 230);
+}
 table{
-    display: inline-block;
+    
     border-collapse: collapse;
 }
